@@ -15,7 +15,6 @@ import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.Iterator;
 import java.util.List;
@@ -54,6 +53,9 @@ public class SchedulerService {
 
     // 在 tick 内是否延迟执行等待队列分配（防止 mid-tick stop 导致不一致分配）
     private volatile boolean deferAllocations = false;
+
+    // 防止在执行强制抢占检查时递归触发多次检查的守护标志
+    private volatile boolean enforcingPreemptions = false;
 
     // 内存中维护的队列
     // 服务队列: RoomId -> ServiceUnit
@@ -144,14 +146,20 @@ public class SchedulerService {
         if (serviceQueue.containsKey(roomId)) {
             ServiceUnit unit = serviceQueue.get(roomId);
             if (unit.getFanSpeed() != fanSpeed) {
-                // 风速改变：结束当前服务，重新请求（重置累计服务时长）
-                log.info("Fan speed changed for room {} in service queue, re-dispatching", roomId);
-                // 1. 先从服务队列移除并生成详单
-                stopServiceWithoutAllocation(roomId);
-                // 2. 以新风速加入等待队列
-                addToWaitingQueue(roomId, fanSpeed, TIME_SLICE_LOGIC_SECONDS);
-                // 3. 让所有等待队列中的请求竞争这个空出来的服务位
-                tryAllocateFromWaitingQueue();
+                // 风速改变：直接在服务队列中更新，并结算之前的费用
+                log.info("Fan speed changed for room {} in service queue, updating in place", roomId);
+
+                // 1. 结算旧风速段的详单
+                createBillingDetail(unit);
+
+                // 2. 更新服务单元信息（重置开始时间和费用，保留在服务队列）
+                unit.setFanSpeed(fanSpeed);
+                unit.setStartTime(timeService.getCurrentTime());
+                unit.setServedDurationSeconds(0);
+                unit.setCurrentFee(0.0);
+
+                // 3. 触发抢占检查：新风速可能导致优先级变化，需要检查是否应被等待队列抢占
+                enforceNoMissedPreemptions();
             } else {
                 // 风速没变，仅更新目标温度等，不影响调度
                 roomRepository.save(room);
@@ -244,7 +252,7 @@ public class SchedulerService {
                 })
                 .collect(Collectors.toList());
 
-        ServiceUnit candidateToPreempt = sortedServiceUnits.getFirst(); // 优先级最低且服务时间最长的
+        ServiceUnit candidateToPreempt = sortedServiceUnits.get(0); // 优先级最低且服务时间最长的
 
         int newPriority = getPriority(newFanSpeed);
         int candidatePriority = getPriority(candidateToPreempt.getFanSpeed());
@@ -361,7 +369,7 @@ public class SchedulerService {
                 .collect(Collectors.toList());
 
         if (!sortedWaiting.isEmpty()) {
-            WaitingInfo next = sortedWaiting.getFirst();
+            WaitingInfo next = sortedWaiting.get(0);
             log.info("Allocating from waiting queue: Room {} (priority {}, totalWaited={}s)",
                     next.getRoomId(), getPriority(next.getFanSpeed()), next.getTotalWaitedTime());
             startService(next.getRoomId(), next.getFanSpeed());
@@ -369,12 +377,18 @@ public class SchedulerService {
     }
 
     private void preempt(String kickedRoomId, String newRoomId, FanSpeed newFanSpeed) {
+        // 关键修复：先从等待队列移除新房间，防止后续 addToWaitingQueue 触发的 enforceNoMissedPreemptions
+        // 再次扫描到该房间从而导致二次抢占（Double Preemption）
+        waitingQueue.remove(newRoomId);
+
         // 踢出旧房间
-        stopService(kickedRoomId, false); // 这里的 false 表示不是关机，而是被挂起
+        // 使用不触发分配的停止方法，避免 stopService 在释放槽位时触发 tryAllocateFromWaitingQueue
+        // 从而导致新房间无法立刻占位的竞态
+        stopServiceWithoutAllocation(kickedRoomId);
         // 加入等待队列，分配等待时间（120秒逻辑时间）
         addToWaitingQueue(kickedRoomId, roomRequests.get(kickedRoomId).getFanSpeed(), TIME_SLICE_LOGIC_SECONDS);
 
-        // 启动新房间
+        // 立即启动新房间
         startService(newRoomId, newFanSpeed);
     }
 
@@ -390,6 +404,9 @@ public class SchedulerService {
 
         updateRoomStatus(roomId, RoomStatus.WAITING);
         log.info("Added to Waiting Queue: Room={}, WaitTime={}", roomId, waitSeconds);
+        // 在每次有新的等待者加入时，立即检查是否存在可以发生的抢占，
+        // 防止出现"等待队列可以抢占服务队列但未抢占"的不一致情况。
+        enforceNoMissedPreemptions();
     }
 
     private void updateRoomStatus(String roomId, RoomStatus status) {
@@ -407,10 +424,11 @@ public class SchedulerService {
         detail.setRoomId(unit.getRoomId());
         detail.setRequestTime(unit.getStartTime()); // 简化: 请求时间约等于开始时间
         detail.setStartTime(unit.getStartTime());
-        detail.setEndTime(timeService.getCurrentTime());
-
-        long duration = Duration.between(detail.getStartTime(), detail.getEndTime()).getSeconds();
+        // 使用逻辑秒记录本次会话时长，避免与真实时间刻度产生偏差
+        long duration = unit.getServedDurationSeconds();
         detail.setDuration(duration);
+        // 将结束时间设置为开始时间加上逻辑秒数，保持展示一致性
+        detail.setEndTime(unit.getStartTime().plusSeconds(duration));
         detail.setFanSpeed(unit.getFanSpeed());
         // 将本次会话费用及累计费用四舍五入到两位后写入详单
         double roundedSessionFee = Math.round(unit.getCurrentFee() * 100.0) / 100.0;
@@ -443,6 +461,24 @@ public class SchedulerService {
         }
     }
 
+    // 辅助: 返回指定风速每分钟的温度变化速率（度/分钟）
+    private double getRatePerMin(FanSpeed speed) {
+        switch (speed) {
+            case HIGH:
+                return 1.0;
+            case MIDDLE:
+                return 0.5;
+            case LOW:
+                return 1.0 / 3.0;
+            default:
+                return 0.0;
+        }
+    }
+
+    private Room findRoom(String roomId) {
+        return roomRepository.findByRoomId(roomId).orElse(null);
+    }
+
     private int compareRoomIdAsc(String r1, String r2) {
         if (r1 == null && r2 == null)
             return 0;
@@ -467,30 +503,84 @@ public class SchedulerService {
         double logicMinutesPassed = logicSecondsPassed / 60.0;
 
         // 1. 更新服务队列中的房间 (温度、费用)
-        // 在处理服务队列期间，延迟对等待队列的分配，避免 mid-tick 的不一致分配
-        deferAllocations = true;
-        // 使用迭代器以安全删除
-        Iterator<Map.Entry<String, ServiceUnit>> serviceIt = serviceQueue.entrySet().iterator();
-        while (serviceIt.hasNext()) {
-            Map.Entry<String, ServiceUnit> entry = serviceIt.next();
-            String roomId = entry.getKey();
-            ServiceUnit unit = entry.getValue();
+        // 采用事件模拟：在一个 tick 的逻辑秒范围内，按事件（某些服务达到目标温度而结束）划分区间，
+        // 对每个区间逐步更新正在服务的房间；当某个房间在区间内结束时，立即释放服务位并允许等待队列竞争剩余时间。
+        // 这样可以处理像“在半个逻辑秒内达到目标并将余下时间分配给其它等待者”这样的场景。
+        // 为支持中途分配，允许 stopService 在区间中触发 tryAllocateFromWaitingQueue()
+        deferAllocations = false;
 
-            // 安全检查：如果房间未入住，自动停止服务
-            Room room = roomRepository.findByRoomId(roomId).orElse(null);
-            if (room != null && (room.getCustomerName() == null || room.getCustomerName().trim().isEmpty())) {
-                log.warn("Room {} is not checked in, stopping service", roomId);
-                serviceIt.remove();
-                // 生成详单并更新房间状态
-                createBillingDetail(unit);
-                room.setStatus(RoomStatus.SHUTDOWN);
-                room.setIsOn(false);
-                roomRepository.save(room);
-                mqttService.publishStatus(roomId, room);
+        long remaining = logicSecondsPassed;
+        // 如果没有正在服务的房间，直接跳过模拟
+        while (remaining > 0 && !serviceQueue.isEmpty()) {
+            // 快照当前服务单元（注意：startService/stopService 可能在循环中修改 serviceQueue）
+            List<ServiceUnit> snapshot = serviceQueue.values().stream().collect(Collectors.toList());
+
+            if (snapshot.isEmpty()) {
+                break;
+            }
+
+            // 安全检查：移除未入住或不可服务的单元（立即产生详单）
+            boolean removedAny = false;
+            for (ServiceUnit u : snapshot) {
+                String rid = u.getRoomId();
+                Room r = roomRepository.findByRoomId(rid).orElse(null);
+                if (r != null && (r.getCustomerName() == null || r.getCustomerName().trim().isEmpty())) {
+                    log.warn("Room {} is not checked in, stopping service", rid);
+                    serviceQueue.remove(rid);
+                    createBillingDetail(u);
+                    r.setStatus(RoomStatus.SHUTDOWN);
+                    r.setIsOn(false);
+                    roomRepository.save(r);
+                    mqttService.publishStatus(rid, r);
+                    removedAny = true;
+                }
+            }
+            if (removedAny) {
+                // 若有被移除的，重新进入下一轮以更新 snapshot
                 continue;
             }
 
-            updateRoomState(roomId, unit, logicSecondsPassed, logicMinutesPassed);
+            // 计算下一个事件时间（若某些服务将在 remaining 秒内达到目标）
+            long nextEvent = Long.MAX_VALUE;
+            for (ServiceUnit u : snapshot) {
+                Room r = roomRepository.findByRoomId(u.getRoomId()).orElse(null);
+                if (r == null)
+                    continue;
+                double ratePerSec = getRatePerMin(u.getFanSpeed()) / 60.0;
+                double beforeTemp = r.getCurrentTemp();
+                double targetTemp = r.getTargetTemp();
+                double neededChange = 0.0;
+                if (r.getMode() == Mode.COOL) {
+                    neededChange = Math.max(0.0, beforeTemp - targetTemp);
+                } else {
+                    neededChange = Math.max(0.0, targetTemp - beforeTemp);
+                }
+                if (neededChange <= 0.0) {
+                    // 已在目标温度或超额，立即作为事件处理（时间0）
+                    nextEvent = Math.min(nextEvent, 0L);
+                } else if (ratePerSec > 0) {
+                    long timeToTarget = (long) Math.ceil(neededChange / ratePerSec);
+                    if (timeToTarget <= remaining) {
+                        nextEvent = Math.min(nextEvent, timeToTarget);
+                    }
+                }
+            }
+
+            long delta = (nextEvent == Long.MAX_VALUE) ? remaining : Math.max(1, nextEvent);
+            if (delta > remaining)
+                delta = remaining;
+            double deltaMinutes = delta / 60.0;
+
+            // 对当前快照中的每个服务单元应用 delta 时间段
+            for (ServiceUnit u : snapshot) {
+                // 可能在上一步中被 stop/removed，因此以当前 serviceQueue 为准
+                if (!serviceQueue.containsKey(u.getRoomId()))
+                    continue;
+                // 调用已有的更新逻辑以处理温度/费用/可能的停止
+                updateRoomState(u.getRoomId(), u, delta, deltaMinutes);
+            }
+
+            remaining -= delta;
         }
 
         // 2. 更新等待队列 (倒计时)
@@ -544,6 +634,10 @@ public class SchedulerService {
             tryAllocateFromWaitingQueue();
         }
 
+        // 分配完毕后，再次强制检查是否存在等待者可以抢占当前服务队列中的低优先级对象，
+        // 这个检查保证在真实时间（每秒）上不会出现可抢占却未抢占的情况。
+        enforceNoMissedPreemptions();
+
         // 3. 关机/空闲房间的回温逻辑
         List<Room> allRooms = roomRepository.findAll();
         for (Room room : allRooms) {
@@ -558,24 +652,11 @@ public class SchedulerService {
         if (room == null)
             return;
 
-        // 更新服务时长
-        unit.setServedDurationSeconds(unit.getServedDurationSeconds() + logicSecondsPassed);
+        // 计算本次实际服务消耗的逻辑秒数（在到达目标温度时需要按比例计算）
+        long actualServedSeconds = 0L;
 
         // 温度变化
-        // 高: 1度/min, 中: 0.5度/min (2min 1度), 低: 0.33度/min (3min 1度)
-        double ratePerMin = 0;
-        switch (unit.getFanSpeed()) {
-            case HIGH:
-                ratePerMin = 1.0;
-                break;
-            case MIDDLE:
-                ratePerMin = 0.5;
-                break;
-            case LOW:
-                ratePerMin = 1.0 / 3.0;
-                break;
-        }
-
+        double ratePerMin = getRatePerMin(unit.getFanSpeed());
         double tempChange = ratePerMin * logicMinutesPassed;
         double beforeTemp = room.getCurrentTemp();
         double targetTemp = room.getTargetTemp();
@@ -587,11 +668,20 @@ public class SchedulerService {
                 // 本次 tick 会到达或超过目标，只计到达目标的实际温差
                 actualChange = Math.max(0.0, beforeTemp - targetTemp);
                 room.setCurrentTemp(targetTemp);
-                // 先记录费用，再停止服务（stopSupply 可能会移除 serviceQueue）
+                // 计算本次实际消耗的逻辑秒数的比例
+                if (tempChange > 0) {
+                    double ratio = actualChange / tempChange;
+                    actualServedSeconds = Math.max(0L, Math.round(ratio * logicSecondsPassed));
+                } else {
+                    actualServedSeconds = 0L;
+                }
+                // 先记录费用
                 unit.setCurrentFee(unit.getCurrentFee() + actualChange);
                 double currentTotal = (room.getTotalFee() == null ? 0 : room.getTotalFee());
                 double newTotal = currentTotal + actualChange;
                 room.setTotalFee(newTotal);
+                // 增加仅实际服务的秒数
+                unit.setServedDurationSeconds(unit.getServedDurationSeconds() + actualServedSeconds);
                 // 达到目标温度，停止送风
                 stopSupply(roomId, false);
             } else {
@@ -600,14 +690,23 @@ public class SchedulerService {
                 unit.setCurrentFee(unit.getCurrentFee() + actualChange);
                 double currentTotal = (room.getTotalFee() == null ? 0 : room.getTotalFee());
                 room.setTotalFee(currentTotal + actualChange);
+                // 未达到目标，整个逻辑秒都算入服务时长
+                unit.setServedDurationSeconds(unit.getServedDurationSeconds() + logicSecondsPassed);
             }
         } else {
             if (beforeTemp + tempChange >= targetTemp) {
                 actualChange = Math.max(0.0, targetTemp - beforeTemp);
                 room.setCurrentTemp(targetTemp);
+                if (tempChange > 0) {
+                    double ratio = actualChange / tempChange;
+                    actualServedSeconds = Math.max(0L, Math.round(ratio * logicSecondsPassed));
+                } else {
+                    actualServedSeconds = 0L;
+                }
                 unit.setCurrentFee(unit.getCurrentFee() + actualChange);
                 double currentTotal = (room.getTotalFee() == null ? 0 : room.getTotalFee());
                 room.setTotalFee(currentTotal + actualChange);
+                unit.setServedDurationSeconds(unit.getServedDurationSeconds() + actualServedSeconds);
                 // 达到目标温度，停止送风
                 stopSupply(roomId, false);
             } else {
@@ -616,6 +715,7 @@ public class SchedulerService {
                 unit.setCurrentFee(unit.getCurrentFee() + actualChange);
                 double currentTotal = (room.getTotalFee() == null ? 0 : room.getTotalFee());
                 room.setTotalFee(currentTotal + actualChange);
+                unit.setServedDurationSeconds(unit.getServedDurationSeconds() + logicSecondsPassed);
             }
         }
 
@@ -723,7 +823,7 @@ public class SchedulerService {
 
         if (!lowerPriorityUnits.isEmpty()) {
             // 有低优先级的，抢占
-            ServiceUnit toPreempt = lowerPriorityUnits.getFirst();
+            ServiceUnit toPreempt = lowerPriorityUnits.get(0);
             log.info("Time slice: {} (priority {}) preempts {} (priority {})",
                     waiter.getRoomId(), waiterPriority, toPreempt.getRoomId(), getPriority(toPreempt.getFanSpeed()));
             preempt(toPreempt.getRoomId(), waiter.getRoomId(), waiter.getFanSpeed());
@@ -743,7 +843,7 @@ public class SchedulerService {
 
         if (!sameSpeedUnits.isEmpty()) {
             // 有同风速的，时间片轮转
-            ServiceUnit toReplace = sameSpeedUnits.getFirst();
+            ServiceUnit toReplace = sameSpeedUnits.get(0);
             log.info("Time slice swap: {} replaces {} (same priority {})",
                     waiter.getRoomId(), toReplace.getRoomId(), waiterPriority);
             preempt(toReplace.getRoomId(), waiter.getRoomId(), waiter.getFanSpeed());
@@ -763,6 +863,96 @@ public class SchedulerService {
 
     public Map<String, WaitingInfo> getWaitingQueue() {
         return waitingQueue;
+    }
+
+    /**
+     * 强制检查并执行等待队列中能够对服务队列发起的抢占。此方法保证：在任意时刻（按真实时间刻度），
+     * 不会存在一个等待者可以抢占服务队列但没有被抢占的情况。
+     *
+     * 实现细节：
+     * - 按等待者的“有效优先级”降序选择候选（基础风速优先级 + 超过时间片的提升），
+     * - 按服务队列选择优先级最低且服务时间最长的候选进行比较与抢占，
+     * - 重复直到不存在可执行的抢占。
+     */
+    private synchronized void enforceNoMissedPreemptions() {
+        if (enforcingPreemptions) {
+            return;
+        }
+        enforcingPreemptions = true;
+        try {
+            if (waitingQueue.isEmpty() || serviceQueue.isEmpty()) {
+                return;
+            }
+
+            boolean changed = true;
+            while (changed) {
+                changed = false;
+
+                // 选出等待队列中最有资格抢占的等待者（有效优先级最高，然后累计等待时间）
+                WaitingInfo bestWaiting = waitingQueue.values().stream()
+                        .sorted((w1, w2) -> {
+                            int p1 = getPriority(w1.getFanSpeed())
+                                    + (w1.getTotalWaitedTime() >= TIME_SLICE_LOGIC_SECONDS ? 1 : 0);
+                            int p2 = getPriority(w2.getFanSpeed())
+                                    + (w2.getTotalWaitedTime() >= TIME_SLICE_LOGIC_SECONDS ? 1 : 0);
+                            if (p1 != p2)
+                                return p2 - p1; // 降序
+                            int waitedCmp = Long.compare(w2.getTotalWaitedTime(), w1.getTotalWaitedTime());
+                            if (waitedCmp != 0)
+                                return waitedCmp;
+                            return compareRoomIdAsc(w1.getRoomId(), w2.getRoomId());
+                        })
+                        .findFirst().orElse(null);
+
+                if (bestWaiting == null)
+                    break;
+
+                // 选出服务队列中最容易被抢占的服务对象（最低优先级，若相同则服务时间最长）
+                List<ServiceUnit> sortedServiceUnits = serviceQueue.values().stream()
+                        .sorted((u1, u2) -> {
+                            int p1 = getPriority(u1.getFanSpeed());
+                            int p2 = getPriority(u2.getFanSpeed());
+                            if (p1 != p2)
+                                return p1 - p2; // 升序：优先选择最低优先级
+                            int cmp = Long.compare(u2.getServedDurationSeconds(), u1.getServedDurationSeconds());
+                            if (cmp != 0)
+                                return cmp;
+                            return compareRoomIdAsc(u1.getRoomId(), u2.getRoomId());
+                        })
+                        .collect(Collectors.toList());
+
+                if (sortedServiceUnits.isEmpty())
+                    break;
+
+                ServiceUnit candidate = sortedServiceUnits.get(0);
+                int candidatePriority = getPriority(candidate.getFanSpeed());
+                int bestEffective = getPriority(bestWaiting.getFanSpeed())
+                        + (bestWaiting.getTotalWaitedTime() >= TIME_SLICE_LOGIC_SECONDS ? 1 : 0);
+
+                if (bestEffective > candidatePriority) {
+                    log.info("Enforce preempt: waiting {} (effPr={}) preempts {} (pr={})",
+                            bestWaiting.getRoomId(), bestEffective, candidate.getRoomId(), candidatePriority);
+                    preempt(candidate.getRoomId(), bestWaiting.getRoomId(), bestWaiting.getFanSpeed());
+                    changed = true;
+                } else if (bestEffective == candidatePriority) {
+                    // 当有效优先级相等时，仅在同风速且等待者已达到时间片时进行替换（轮转）
+                    if (bestWaiting.getFanSpeed() == candidate.getFanSpeed()
+                            && bestWaiting.getTotalWaitedTime() >= TIME_SLICE_LOGIC_SECONDS) {
+                        log.info("Enforce same-speed swap: waiting {} replaces {} (priority={})",
+                                bestWaiting.getRoomId(), candidate.getRoomId(), candidatePriority);
+                        preempt(candidate.getRoomId(), bestWaiting.getRoomId(), bestWaiting.getFanSpeed());
+                        changed = true;
+                    } else {
+                        // 否则不抢占，继续寻找下一个等待者
+                        // 将该等待者视为不可抢占，临时从考虑集中排除（通过在后续迭代重新评估）
+                        // 直接跳出本次循环以避免无限循环
+                        break;
+                    }
+                }
+            }
+        } finally {
+            enforcingPreemptions = false;
+        }
     }
 
     /**
